// Copyright 2025 Author(s) of MCP Any
// SPDX-License-Identifier: Apache-2.0

edition = "2023";

package mcpany.api.v1;

import "google/api/annotations.proto";
import "proto/config/v1/webhook.proto";
import "google/protobuf/go_features.proto";

option go_package = "github.com/mcpany/core/proto/api/v1";
option java_outer_classname = "WebhookServiceProto";
option features.field_presence = IMPLICIT;

service WebhookService {
  rpc ListWebhooks(ListWebhooksRequest) returns (ListWebhooksResponse) {
    option (google.api.http) = {
      get: "/v1/webhooks"
    };
  }

  rpc CreateWebhook(CreateWebhookRequest) returns (CreateWebhookResponse) {
    option (google.api.http) = {
      post: "/v1/webhooks"
      body: "webhook"
    };
  }

  rpc DeleteWebhook(DeleteWebhookRequest) returns (DeleteWebhookResponse) {
    option (google.api.http) = {
      delete: "/v1/webhooks/{id}"
    };
  }
}

message ListWebhooksRequest {}

message ListWebhooksResponse {
  repeated mcpany.config.v1.WebhookSubscription webhooks = 1;
}

message CreateWebhookRequest {
  mcpany.config.v1.WebhookSubscription webhook = 1;
}

message CreateWebhookResponse {
  mcpany.config.v1.WebhookSubscription webhook = 1;
}

message DeleteWebhookRequest {
  string id = 1;
}

message DeleteWebhookResponse {}
